--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BMIApp</string>
+    <string name="height">HEIGHT:</string>
+    <string name="next">Next</string>
+    <string name="onePointThreeMeters">1.3m</string>
 </resources>
