Added comments to the code for easy readability

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">BMIApp</string>
     <string name="height">HEIGHT:</string>
     <string name="next">Next</string>
-    <string name="onePointThreeMeters">1.3m</string>
     <string name="weight">WEIGHT:</string>
     <string name="bmi">BMI:</string>
     <string name="normalWeightDetails">Hello there, the user of our amazing BMI calculator based on the information you have
@@ -11,4 +10,7 @@
     provided us we are pleased to inform you that you have an UNDERWEIGHT body mass Index. We encourage you to eat more and add some more weight. \n Cheers!!</string>
     <string name="overWeightDetails">Hello there, the user of our amazing BMI calculator based on the information you have
     provided us we are pleased to inform you that you have a OVERWEIGHT body mass Index. We encourage you to workout well to be able to balance things up. \n Cheers!!</string>
+    <string name="zeroMetres">0m</string>
+    <string name="zeroKilogram">0kg</string>
+    <string name="zero">0</string>
 </resources>
